# clawdface_v3

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  bp.py  livekit.toml  livekit.toml.bak  main (2).go  pyproject.toml  recall.py  requirements.txt  test01.py  test_toolcall.py
frontend/: .gitignore  README.md  build_err2.txt  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agents/: route.ts
frontend/app/api/agents/[email]/: route.ts
frontend/app/api/agents/config/: route.ts
frontend/app/api/check-user/: route.ts
frontend/app/api/connection-details/: route.ts
frontend/app/api/send-otp/: route.ts
frontend/app/api/start-agent/: route.ts
frontend/app/api/user-config/: route.ts
frontend/app/api/verify-otp/: route.ts
frontend/app/avatar/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: NoAgentNotification.tsx  Providers.tsx  Sidebar.tsx  TranscriptionView.tsx
frontend/drizzle/: schema.tsx
frontend/hooks/: useCombinedTranscriptions.ts
frontend/lib/: auth.ts  database-actions.ts  supabase.ts  userStore.ts  utils.ts
