[project]
name = "clawdface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "groq>=1.1.1",
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "librosa>=0.11.0",
    "livekit-agents[cartesia,deepgram,elevenlabs,google,groq,openai,silero,tavus,trugen,turn-detector]>=1.4",
    "livekit-plugins-aws[realtime]>=1.4.4",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "mcp>=1.26.0",
    "moondream>=0.2.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
    "websockets>=10.0,<16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
